Wire up grpc API

--- a/repo/sample-obcrawler.conf
+++ b/repo/sample-obcrawler.conf
@@ -7,12 +7,25 @@
 ; $VARIABLE here.  Also, ~ is expanded to $LOCALAPPDATA on Windows.
 ; datadir=~/.openbazaar
 
+; Set the number of IPFS nodes to use. These will be spun up inside the single crawler instance.
+; nodes=10
+
+; Set the number of workers to use to crawl nodes.
+; workers=12
+
+; This is the number of nodes to use to listen on for pubsub publishes.
+; pubsubnodes=3
+
 ; Use testnet.
 ; testnet=1
 
 ; Universal Plug and Play (UPnP) automatically opens the listen port obtains
 ; the external IP address from supported devices. This option disables it.
 ; noupnp=1
+
+; Crawl interval specifies how long to wait before doing a DHT crawl for a random peerID
+; to search out new peerIDs.
+; crawlinterval=1m
 
 ; Bootstap addresses are used to join the network. On start the node will make
 ; outgoing connections to the bootstrap peers and use them to discover other
@@ -44,3 +57,23 @@
 
 ; The password for the mysql or postgress db.
 ; dbpass=password
+
+; By default the crawler will download and cache images and ratings even though they are not indexed as
+; a service to the network and to ensure data availability. Use the following to disable this functionality.
+; disabledatacaching=1
+
+; By default all files downloaded will be pinned and not garbage collected. Use the following to disable
+; this functionality.
+;diablefilepinning=1
+
+; Specify the gRPC interface and port to listen on if you want to use the gRPC API.
+; grpclisten=0.0.0.0:5001
+
+; An authentication token for the gRPC API to authenticate clients.
+; grpcauthtoken=<oauth2-token>
+
+; File containing the certificate file
+; rpccert=~/.obcrawler/rpc.cert
+
+; File containing the certificate key
+; rpckey=~/.obcrawler/rpc.key
