Fix bug in grpc server

--- a/repo/sample-obcrawler.conf
+++ b/repo/sample-obcrawler.conf
@@ -25,7 +25,7 @@
 
 ; Crawl interval specifies how long to wait before doing a DHT crawl for a random peerID
 ; to search out new peerIDs.
-; crawlinterval=1m
+; crawlinterval=5m
 
 ; Bootstap addresses are used to join the network. On start the node will make
 ; outgoing connections to the bootstrap peers and use them to discover other
@@ -77,3 +77,7 @@
 
 ; File containing the certificate key
 ; rpckey=~/.obcrawler/rpc.key
+
+; This option should be used to specify the external IP address if using the auto-generated SSL certificate.
+; If this option is not used when the cert is generated it will likely be treated as invalid.
+; externalips=127.0.0.1
