Update sample config

--- a/repo/sample-obcrawler.conf
+++ b/repo/sample-obcrawler.conf
@@ -1,11 +1,11 @@
-; The directory to store data such as the openbazaar database, ipfs metadata, and
+; The directory to store data such as the obcrawler database, ipfs metadata, and
 ; public data.
-; The default is ~/.openbazaar on POSIX OSes, $LOCALAPPDATA/OpenBazaar on Windows,
-; ~/Library/Application Support/OpenBazaar on Mac OS, and $home/openbazaar on
+; The default is ~/.obcrawler on POSIX OSes, $LOCALAPPDATA/Obcrawler on Windows,
+; ~/Library/Application Support/Obcrawler on Mac OS, and $home/Obcrawler on
 ; Plan9.  Environment variables are expanded so they may be used.  NOTE: Windows
 ; environment variables are typically %VARIABLE%, but they must be accessed with
 ; $VARIABLE here.  Also, ~ is expanded to $LOCALAPPDATA on Windows.
-; datadir=~/.openbazaar
+; datadir=~/.obcrawler
 
 ; Set the number of IPFS nodes to use. These will be spun up inside the single crawler instance.
 ; nodes=10
@@ -44,7 +44,7 @@
 ; loglevel=info
 
 ; The directory to store log files
-; logdir=~/.openbazaar/logs
+; logdir=~/.obcrawler/logs
 
 ; This is the db type. It can either be sqlite3, mysql, or postgress.
 ; dbdialect=mysql
